[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/godot-psd-importer/editor/import_dock.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-psd-importer/editor/icons/icon_folder.svg" type="Texture" id=2]

[node name="Import PSD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 400
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVBoxContainer" type="VBoxContainer" parent="VSplitContainer"]
margin_right = 1024.0
margin_bottom = 418.0
__meta__ = {
"__editor_plugin_screen__": "2D"
}

[node name="Label" type="Label" parent="VSplitContainer/MainVBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Import Settings"

[node name="Panel" type="Panel" parent="VSplitContainer/MainVBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 418.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VSplitContainer/MainVBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 395.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer"]
margin_right = 1014.0
margin_bottom = 76.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 1014.0
margin_bottom = 76.0
size_flags_horizontal = 3
columns = 2

[node name="PsdFileLabel" type="Label" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
margin_right = 52.0
margin_bottom = 24.0
size_flags_horizontal = 0
size_flags_vertical = 1
text = "PSD File"
valign = 1

[node name="PsdFileContainer" type="HBoxContainer" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 87.0
margin_right = 1014.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PsdFileLineEdit" type="LineEdit" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/PsdFileContainer"]
margin_right = 895.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "res://addons/godot-psd-importer/examples/Sample.psd"

[node name="PsdFileDialogButton" type="Button" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/PsdFileContainer"]
margin_left = 899.0
margin_right = 927.0
margin_bottom = 24.0
icon = ExtResource( 2 )

[node name="TargetFolderLabel" type="Label" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
margin_top = 28.0
margin_right = 83.0
margin_bottom = 52.0
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Target Folder"
valign = 1

[node name="TargetFolderContainer" type="HBoxContainer" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 87.0
margin_top = 28.0
margin_right = 1014.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="TargetFolderLineEdit" type="LineEdit" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/TargetFolderContainer"]
margin_right = 895.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "res://"

[node name="TargetFolderDialogButton" type="Button" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/TargetFolderContainer"]
margin_left = 899.0
margin_right = 927.0
margin_bottom = 24.0
icon = ExtResource( 2 )

[node name="ExportTypeLabel" type="Label" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
margin_top = 56.0
margin_right = 74.0
margin_bottom = 76.0
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Export Type"
valign = 1

[node name="ExportTypeButton" type="OptionButton" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 87.0
margin_top = 56.0
margin_right = 1014.0
margin_bottom = 76.0
text = "PNG"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildVBoxContainer" type="VBoxContainer" parent="VSplitContainer"]
margin_top = 430.0
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"__editor_plugin_screen__": "2D"
}

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/BuildVBoxContainer"]
margin_left = 484.0
margin_right = 540.0
margin_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="ImportButton" type="Button" parent="VSplitContainer/BuildVBoxContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 20.0
text = "Import"
